# hardware-aware-llm-runtime

./: .gitignore  CMakeLists.txt  README.md  plot.py
core/: RooflineAnalyzer.cpp  hardware_profiler.cpp  main.cpp  roofline.cpp
include/: RooflineAnalyzer.h  hardware_profiler.h  roofline.h
